Update Crowdin configuration file

--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,10 +1,8 @@
 files:
-  - source: /app/*.xml
+  - source: /v4/*.xml
     translation: /build/app/values-%android_code%/%original_file_name%
-    translate_attributes: '0'
-  - source: /content/*.properties
+    translate_attributes: 0
+  - source: /v4/*.properties
     translation: /build/content/%locale_with_underscore%/%original_file_name%
-  - source: blocka_app/*.pot
-    translation: /build/blocka_app/%file_name%-%locale%.po
-  - source: /fem/*.strings
+  - source: /v5/*.strings
     translation: /build/fem/%osx_code%/%original_file_name%
